[package]
name = "ic-testnet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "3.2.25", features = ["derive"] }
ic-config = { path = "ic/rs/config" }
ic-logger = { path = "ic/rs/monitoring/logger" }
ic-management-canister-types = { path = "ic/rs/types/management_canister_types" }
ic-prep = { path = "ic/rs/prep" }
ic-protobuf = { path = "ic/rs/protobuf" }
ic-registry-provisional-whitelist = { path = "ic/rs/registry/provisional_whitelist" }
ic-registry-subnet-features = { path = "ic/rs/registry/subnet_features" }
ic-registry-subnet-type = { path = "ic/rs/registry/subnet_type" }
ic-types = { path = "ic/rs/types/types" }
serde = "1.0.209"
serde_json = "1.0.127"
slog = "2.7.0"
tempfile = "3.12.0"

[features]
default = []